--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,20 @@
 [lib]
 proc-macro = true
 
+[features]
+serde = []
+default = []
+
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = { version = "2.0", features = ["full", "visit"] }
+syn = { version = "2.0", features = ["full"] }
 
 [dev-dependencies]
 trybuild = "1.0"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+e-macros = { path = ".", features = ["serde"] }
 
 [package]
 name = "e-macros"
