--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ proc-macro = true
 
 [features]
 serde = []
+serde_json = []
 default = []
 
 [dependencies]
@@ -15,7 +16,7 @@ syn = { version = "2.0", features = ["full"] }
 trybuild = "1.0"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
-e-macros = { path = ".", features = ["serde"] }
+e-macros = { path = ".", features = ["serde","serde_json"] }
 
 [package]
 name = "e-macros"
