--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,16 @@ trybuild = "1.0"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 e-macros = { path = "." }
+criterion = "0.3"
 
+[[bench]]
+name = "value_enum_benchmark"
+harness = false
 
 [package]
 name = "e-macros"
 version = "0.2.0"
-description = "This is a macro definition that can handle Json and C data"
+description = "Rust macros to simplify and accelerate enum handling: effortless conversion, fast indexing, and painless serialization"
 authors = [
   "Eternal Night <EternalNight996@gmail.com, EternalNightYeah2@yeah.net>",
 ]
@@ -28,7 +32,7 @@ license-file = "MIT-LICENSE"
 readme = "README.md"
 documentation = "https://docs.rs/e-macros"
 repository = "https://gitee.com/eternalnight996/e-macros"
-include = ["src/", "*.md", "*-LICENSE", "Cargo.toml"]
+include = ["src/", "*.md", "*-LICENSE", "Cargo.toml","docs/"]
 keywords = ["macros", "json", "c", "c++", "e-"]
 categories = ["development-tools::procedural-macro-helpers"]
 
@@ -36,3 +40,23 @@ categories = ["development-tools::procedural-macro-helpers"]
 # RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
 rustdoc-args = ["--cfg", "doc_cfg"]
 all-features = true
+
+
+[[example]]
+name = "serde_example"
+path = "examples/serde_example.rs"
+
+[[example]]
+name = "from_example"
+path = "examples/from_example.rs"
+
+[[example]]
+name = "repr_example"
+path = "examples/repr_example.rs"
+
+[[example]]
+name = "debug_display_example"
+path = "examples/debug_display_example.rs"
+[[example]]
+name = "value_index_example"
+path = "examples/value_index_example.rs"
