--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ authors = [
 edition = "2021"
 rust-version = "1.76.0"
 homepage = "https://gitee.com/eternalnight996"
-license-file = "MIT-LICENSE"
+license-file = "LICENSE-MIT"
 readme = "README.md"
 documentation = "https://docs.rs/e-macros"
 repository = "https://gitee.com/eternalnight996/e-macros"
