--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ trybuild = "1.0"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 e-macros = { path = "." }
-criterion = "0.3"
+criterion = "0.5.1"
 
 [[bench]]
 name = "value_enum_benchmark"
@@ -32,7 +32,7 @@ license-file = "LICENSE-MIT"
 readme = "README.md"
 documentation = "https://docs.rs/e-macros"
 repository = "https://gitee.com/eternalnight996/e-macros"
-include = ["src/", "*.md", "*-LICENSE", "Cargo.toml","docs/"]
+include = ["src/", "*.md", "*-LICENSE", "Cargo.toml","docs/","COPYRIGHT"]
 keywords = ["macros", "json", "c", "c++", "e-"]
 categories = ["development-tools::procedural-macro-helpers"]
 
